ref#18593 - Inproved member search feature.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,7 +1,67 @@
 <h1>Search</h1>
+<%= form_tag(members_path, :method => 'post', :id => 'at_least_one_required' ,:html => { :class => 'well form-inline' }) do |f| %>
 
-<%= form_tag('#', :method => 'get', :html => { :class => 'well form-inline' }) do %>
-  Fields
-  <p><%= submit_tag 'Search', :class => "btn btn-inverse" -%></p>
-  <p><%= link_to 'New Member', new_member_path, :class => "btn btn-primary"  %></pt>
+  <table class="table table-bordered table-condensed">
+    <tr>
+      <td>
+        <%= t('activerecord.attributes.member.member_id') %>
+        <%= text_field :member, :member_id, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.first_name') %>
+        <%= text_field :member, :first_name, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.last_name') %>
+        <%= text_field :member, :last_name, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.address') %>
+        <%= text_field :member, :address, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.phone_number') %>
+        <%= text_field :member, :phone_number, :class => 'test_field' %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= t('activerecord.attributes.member.city') %>
+        <%= text_field :member, :city, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.state') %>
+        <%= text_field :member, :state, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.member.zip') %>
+        <%= text_field :member, :zip, :class => 'test_field' %>
+      </td>
+      <td>
+        <%= t('activerecord.attributes.credit_card.email') %>
+        <%= text_field :member, :email, :class => 'text_field' %>         
+      </td>
+      <td> 
+        <%= t('activerecord.attributes.credit_card.last_digits') %>
+        <%= text_field :member, :last_digits, :class => 'text_field' %> 
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" style='padding: 8px'> 
+        <%= t('activerecord.attributes.credit_card.next_bill_date') %>
+        <%= text_field :member, :bill_date, :class => 'text_field datepicker' %> 
+      </td>
+      <td colspan="3" style='padding: 8px'> <%= submit_tag 'Search', :class => "btn btn-inverse" -%> </td>
+    </tr>
+  </table>
+
+  <% if !@members.nil? %>
+  <div class="tab-pane" id="members">
+    <%= render :partial => 'search', :locals => { :members => @members} %>
+  </div>  
+  <% end %>
+
+  <p><%= link_to 'New Member', new_member_path, :class => "btn btn-primary"  %></p>
+
 <% end %>
+
