Changed paid for active. (only on css class)

--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -12,7 +12,7 @@
       <th <% if member.lapsed? %>
             class = "lapsed"
           <% elsif member.paid? %>
-            class = "paid"
+            class = "active"
           <% elsif %>
             class = "provisional"
           <% end %>
