Changed css name. The former one was changing the dataTable css.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,15 +22,15 @@ form .clearfix:before, form .clearfix:after {
 	background-color: red;
 }
 
-.active{
+.green{
 	background-color: green;
 }
 
-.lapsed{
+.red{
 	background-color: red;
 }
 
-.provisional{
+.yellow{
 	background-color: yellow;
 }
 
