--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -48,11 +48,11 @@
     <tr> 
       <th colspan= "3"> Membership Information </th>
       <th <% if @current_member.lapsed? %>
-            class = "lapsed"
+            class = "red"
           <% elsif @current_member.paid? %>
-            class = "active"
+            class = "green"
           <% elsif %>
-            class = "provisional"
+            class = "yellow"
           <% end %>
       > 
       <%= @current_member.status %>      
