ref#19072 - Removed confirm class from submit button. Now it only ask once.

--- a/app/views/members/cancel.html.erb
+++ b/app/views/members/cancel.html.erb
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <th> 
-          <%= submit_tag t(:save), :class => 'btn btn-primary confirm', 
+          <%= submit_tag t(:save), :class => 'btn btn-primary', 
                                    :confirm => t('text_cancel_are_you_sure') %>
           <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> 
         </th>
