Fixed datepicker. Now it allow to pick actual day, and doesn't allow to enter any key

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -49,7 +49,7 @@
     <tr>
       <td colspan="2" style='padding: 8px'> 
         <%= t('activerecord.attributes.credit_card.next_bill_date') %>
-        <%= text_field :member, :bill_date, :class => 'text_field datepicker' %> 
+        <%= text_field :member, :bill_date, :class => 'text_field datepicker_for_search', :readonly => 'readonly' %> 
       </td>
       <td colspan="3" style='padding: 8px'> <%= submit_tag 'Search', :class => "btn btn-inverse" -%> </td>
     </tr>
