Moved some functions from coffee to application.js. It has to be fixed

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -62,6 +62,8 @@
   <% end %>
 
   <p><%= link_to 'New Member', new_member_path, :class => "btn btn-primary"  %></p>
-
 <% end %>
 
+<script type="text/javascript">
+  $(document).ready(search_functions());
+</script>
