--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -13,3 +13,5 @@
 <link href="/images/favicon.ico" rel="shortcut icon"/>
 
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css"/>
+
+<%= javascript_include_tag "application" %>
