--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -65,5 +65,5 @@
 <% end %>
 
 <script type="text/javascript">
-  $(document).ready( search_functions() );
+  $(document).ready( member_index_functions() );
 </script>
