fixing oColumn Js bug. datatable does not support colspan

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -1,7 +1,10 @@
 <table class="table table-bordered datatable_only_sorting">
   <thead>
     <tr>
-      <th colspan="4">Transactions</th>
+      <th>Fecha</th>
+      <th>Description</th>
+      <th>Amount</th>
+      <th></th>
     </tr>
   </thead>
   <% transactions.each do |transaction| %>
