--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -10,3 +10,7 @@
 <%= form_for @current_member, :url => edit_member_path(:id => @current_member), :html => { :class => 'form-horizontal' } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
+
+<script type="text/javascript">
+  $(document).ready( edit_member_functions() );
+</script>
