--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -5,3 +5,8 @@
 <%= form_for @member, :html => { :class => 'form-horizontal' } do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <% end %>
+
+
+<script>
+  $(document).ready(new_member_functions());
+</script>
