Fixed credit_card creation

--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "shared/member_information" %>
 
-<%= form_for @credit_card, :as => :credit_card, :url => credit_cards_path(@credit_card), do |f| %>
+<%= form_for @credit_card, :as => :credit_card, :url => credit_cards_path, do |f| %>
 <table class="table table-bordered" >
   <tr>
     <td> 
