--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -10,7 +10,7 @@
 
 <%= stylesheet_link_tag "application", :media => "all" %>
 
-<link href="/images/favicon.ico" rel="shortcut icon"/>
+<link href="/favicon.ico" rel="shortcut icon"/>
 
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 
