--- a/app/views/members/_notes.html.erb
+++ b/app/views/members/_notes.html.erb
@@ -1,10 +1,5 @@
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th colspan="2">Notes <%= link_to "Add a note", new_member_note_path, :class => "btn btn-warning" %></th>
-    </tr>
-  </thead> 
-</table>    
+<%= link_to "Add a note", new_member_note_path, :class => "btn btn-warning" %>
+
 <% notes.each do |note| %>
   <table class="table table-bordered">
     <tr>
