ref#19187 - Added member_since_date column.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -61,7 +61,7 @@
   </thead>  
   <tr>
     <td> <%= t('activerecord.attributes.member.member_since_date') %>: 
-         <%= I18n.l @current_member.created_at, :format => :long%> </td>
+         <%= I18n.l @current_member.member_since_date, :format => :long%> </td>
     <td> <%= t('activerecord.attributes.member.join_date') %>: 
          <%= I18n.l @current_member.join_date, :format => :long %> </td>
     <td>
