--- a/app/views/members/_notes.html.erb
+++ b/app/views/members/_notes.html.erb
@@ -10,7 +10,7 @@
         <%= note.created_by.username %>
         <%= distance_of_time_in_words(note.created_at, Time.now, include_seconds = false, options = {}) %> <%= t(:ago) %>
       </th>
-    <tr style = 'height:auto; display:inline-block; word-wrap: break-word' >
+    <tr class='comment' >
       <td>
         <%= note.description %>
       </td>
