--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -1,24 +1,19 @@
-<table class="table table-condensed"> 
-  <tr class="control-group" >
+<table class="table table-bordered" >
+  <tr>
     <td> 
       <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
-      <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
+      <%= f.text_field :number, :class => 'text_field input-medium'%> 
     <td> 
-      <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
-      <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
+      <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' 
+      %> 
+      <%= f. text_field :expire_month, :class => 'text_field input-small'%>
       <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-      <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
+      <%= f.text_field :expire_year, :class => 'text_field input-small' %>
     </td>
-  </tr> 
-  <% end %>
-  
+  </tr>
   <tr class="control-group">
     <th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t(:Cancel), :back, :class => 'btn' %> </th>
+    <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </th>
   </tr>
-</table>
 
-<% if @member.new_record? %>
-  <%= hidden_field_tag :enrollment_amount, 0.0 %>
-  <%= f.hidden_field :country, :value => "US" %>
-<% end %>
+</table>
