--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -1,23 +1,7 @@
+<%- model_class = @credit_card.class -%>
+
 <%= render :partial => "shared/member_information" %>
 
 <%= form_for @credit_card, :as => :credit_card, :url => credit_cards_path, do |f| %>
-<table class="table table-bordered" >
-  <tr>
-    <td> 
-      <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
-      <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
-    <td> 
-      <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' 
-      %> 
-      <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
-      <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-      <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
-    </td>
-  </tr>
-	<tr class="control-group">
-		<th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
-		<%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </th>
-	</tr>
-
-</table>
-  <% end%>
+  <%= render :partial => 'form', :locals => { :f => f } %>
+<% end%>
