ref#18943 - Added member blacklist feature

--- a/app/views/members/blacklist.html.erb
+++ b/app/views/members/blacklist.html.erb
@@ -1,6 +1,6 @@
 <h1><%= params[:action].humanize %> - <%= @current_member.visible_id %> - <%= @current_member.full_name %></h1>
 
-<%= form_tag(member_cancel_path) do %>
+<%= form_tag(member_blacklist_path) do %>
   <table class="table table-bordered">
     <tr>
       <td> 
