--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -4,9 +4,12 @@
   <tr>
     <td>
       <%= link_to 'Edit', edit_member_path, :class => "btn btn-warning" %>
+    </td>
+    <td>
       <%= form_for @current_member, :url => member_recover_path, do |f| %>
         <%= f.submit t('recovery'), :class => 'btn btn-warning'  if @current_member.lapsed? %>
       <% end %>
+    </td>
     </td>
     <% unless @current_member.lapsed? %>
       <td>
@@ -20,7 +23,7 @@
         <%= link_to("Save the sale", member_save_the_sale_path, :class => "btn btn-warning") if @current_member.can_save_the_sale? %>
       </td>
       <td>
-        <%= link_to "Blacklist", "#", :class => "btn btn-warning" %>
+        <%= link_to "Blacklist", member_blacklist_path, :class => "btn btn-warning" %>
         <%= link_to("Cancel", member_cancel_path, :class => "btn btn-danger") if @current_member.can_be_canceled? %>
       </td>
     <% end %>
