added validation about member blacklisted

--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -1,3 +1,18 @@
+<table>
+  <td>
+
+  </td>
+  <td>
+
+  </td>
+  <td>
+
+  </td>
+  <td>
+
+  </td>
+  
+</table>
 <table class="table table-bordered datatable_only_sorting">
   <thead>
     <tr>
