--- a/app/views/members/blacklist.html.erb
+++ b/app/views/members/blacklist.html.erb
@@ -9,8 +9,8 @@
       </td>
     </tr>
     <tr>
-      <td> <%= submit_tag t(:save), :class => 'btn btn-primary confirm', 
-                                    :confirm => t('text_cancel_are_you_sure') %>
+      <td> <%= submit_tag t(:save), :class => 'btn btn-primary', 
+                                    :confirm => t('text_blacklist_are_you_sure') %>
            <%= link_to t(:Cancel), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
