--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -33,14 +33,14 @@
     <% end %>
   </tr>
   <tr>
-    <th colspan="6" 
+    <th colspan="6"
     <% unless @current_member.wrong_address.nil? %>
       class = "yellow"
     <% end %>
-    > 
+    >
       <i class ="icon-home" > </i> <%= @current_member.full_address %> 
       <%= link_to t('show_on_map'), "http://maps.google.com/maps?f=q&q=#{h @current_member.full_address}&ie=UTF8&om=1", :target => '_blank', :class => "btn btn-info" %>
-      <%= link_to t('set_undeliverable'), member_set_undeliverable_path, :class => "btn btn-danger" if @current_member.wrong_address.nil? %>
+      <%= link_to t('set_undeliverable'), member_set_undeliverable_path, :class => "btn btn-danger" if @current_member.wrong_address.nil? if @current_member.wrong_address.nil? %>
     </th>
   </tr>
   </thead>
