fixed unreachable and wrong phone.

--- a/app/views/members/set_unreachable.html.erb
+++ b/app/views/members/set_unreachable.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>
         <%= label :reason, t('reason'), :class => 'help-inline' %> 
-        <%= select_tag "reason", options_for_select([Settings.wrong_phone_number_options.unreachable_all, Settings.wrong_phone_number_options.unreachable_sloop,
-        Settings.wrong_phone_number_options.unreachable_kit_card]) %>
+        <%= select_tag "reason", options_for_select([Settings.wrong_phone_number.unreachable,                                     Settings.wrong_phone_number.wrong_phone_number]) %>
       </th>
     </tr>
     <tr>
